# ocr-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  pyproject.toml
ocr_gateway/: main.py
ocr_gateway/api/v1/: recognize.py
ocr_gateway/core/: config.py
ocr_gateway/schemas/: ocr.py
ocr_gateway/services/: ocr_service.py
